openshift-gitops/clusters/core.lab.cross.solutions/platform-apps/instance-minio-tenant/minio-s3-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-s3
  namespace: minio
spec:
  host: minio.apps.core.lab.cross.solutions
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
